--- a/pendulum-lab_en.html
+++ b/pendulum-lab_en.html
@@ -51,7 +51,9 @@
 
     if ( brand === 'phet-io' ) {
       preloads = preloads.concat( [
-        '../phet-io/js/phet-io-initialize-globals.js'
+        '../phet-io/js/phet-io-initialize-globals.js',
+        '../pendulum-lab/js/phet-io/pendulum-lab-phet-io-elements-baseline.js',
+        '../pendulum-lab/js/phet-io/pendulum-lab-phet-io-elements-overrides.js'
       ] );
     }
 
