--- a/pendulum-lab_en.html
+++ b/pendulum-lab_en.html
@@ -52,7 +52,8 @@
     preloads = preloads.concat( [
       '../phet-io/js/phet-io-initialize-globals.js',
       '../pendulum-lab/js/phet-io/pendulum-lab-phet-io-elements-baseline.js',
-      '../pendulum-lab/js/phet-io/pendulum-lab-phet-io-elements-overrides.js'
+      '../pendulum-lab/js/phet-io/pendulum-lab-phet-io-elements-overrides.js',
+      '../pendulum-lab/js/phet-io/pendulum-lab-phet-io-types.js'
     ] );
   }
 
