Run grunt update, see https://github.com/phetsims/chipper/issues/1157

--- a/pendulum-lab_en.html
+++ b/pendulum-lab_en.html
@@ -42,6 +42,9 @@
           "adapted-from-phet"
         ],
         "simulation": true,
+        "simFeatures": {
+          "supportsSound": true
+        },
         "supportsOutputJS": true
       },
       "eslintConfig": {
