--- a/pendulum-lab_en.html
+++ b/pendulum-lab_en.html
@@ -45,7 +45,8 @@
         "simFeatures": {
           "supportsSound": true
         },
-        "supportsOutputJS": true
+        "supportsOutputJS": true,
+        "published": true
       },
       "eslintConfig": {
         "extends": "../chipper/eslint/sim_eslintrc.js"
