Adding screenNameKeys to package.json (and adding some translated strings to some runnables), see https://github.com/phetsims/chipper/issues/1367

--- a/pendulum-lab_en.html
+++ b/pendulum-lab_en.html
@@ -46,7 +46,12 @@
           "supportsSound": true
         },
         "supportsOutputJS": true,
-        "published": true
+        "published": true,
+        "screenNameKeys": [
+          "PENDULUM_LAB/screen.intro",
+          "PENDULUM_LAB/screen.energy",
+          "PENDULUM_LAB/screen.lab"
+        ]
       },
       "eslintConfig": {
         "extends": "../chipper/eslint/sim_eslintrc.js"
