--- a/pendulum-lab_en.html
+++ b/pendulum-lab_en.html
@@ -16,6 +16,7 @@
 
 
 <script type="text/javascript">
+  /*eslint-disable quotes, quote-props*/
 
   window.phet = window.phet || {};
   window.phet.chipper = window.phet.chipper || {};
@@ -144,6 +145,7 @@
 
   // Module loading in compilation-free (development) mode will be kicked off once strings are loaded.
   // This is done in load-unbuilt-strings.js
+  // eslint-disable-next-line bad-sim-text
   window.phet.chipper.loadModules = () => loadURL( '../chipper/dist/js/pendulum-lab/js/pendulum-lab-main.js', 'module' );
 </script>
 </body>
