lint and disable lint in many html files, https://github.com/phetsims/chipper/issues/1405

--- a/test/model-test.html
+++ b/test/model-test.html
@@ -11,6 +11,7 @@
   <script src="../../sherpa/lib/lodash-4.17.4.min.js"></script>
 
   <script src="../../scenery/build/production/scenery.min.js"></script>
+  <!-- eslint-disable --> <!--TODO: fix lint https://github.com/phetsims/chipper/issues/1405-->
 
   <script>
     $( document ).ready( function() {
